Fix travis locked when installing apcu

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ php:
   - 5.4
 
 before_script:
-  - pecl install apcu-beta
+  - printf "\n" | pecl install apcu-beta
   - echo "extension = apcu.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - composer install
