Add phpcs and phpmd to travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,14 @@ php:
 
 before_script:
   - composer install
+  - pear install PHP_CodeSniffer
+  - pear channel-discover pear.phpmd.org
+  - pear channel-discover pear.pdepend.org
+  - pear install phpmd/PHP_PMD
+  - phpenv rehash
+
+script:
+  - phpcs --standard=phpcs.xml ./src
+  - phpmd src/ text phpmd.xml
+  - phpunit
+
